Fixing also other issues with uploading member photo’s.

--- a/mobile/Base.lproj/Main.storyboard
+++ b/mobile/Base.lproj/Main.storyboard
@@ -2020,7 +2020,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="QvK-NN-VIj"/>
-        <segue reference="ghp-LU-FB7"/>
+        <segue reference="5ry-4C-25B"/>
         <segue reference="IG7-Dy-u21"/>
         <segue reference="wJr-mp-pWQ"/>
         <segue reference="Uka-AT-8DX"/>
